<resources>
    <string name="app_name">RaviCommerce</string>
    <string name="wwelcome">Welcome RaviCommerce App</string>
    <string name="email">Enter email</string>
    <string name="password">Enter password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password?</string>

    <string name="user_name">User name</string>
    <string name="conf_password">Confirm password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_here">SignUp</string>
    <string name="dont_have_account">Don\'t have account signup?</string>
    <string name="parches">Purchase</string>
    <string name="demo">Demo</string>
    <string name="pay_now">Pay Now</string>

    <string name="first_name">Frist Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
</resources>